<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <com.mdsd.library.ui.autoBgButton.AutoBgButton
        android:id="@+id/btnAdd"
        style="@style/ButtonDefAdd"
        android:text="@string/comm_add" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/pager_tab_height"
        android:background="@color/app_enable"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/column_time"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/column_ssy"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/column_szy"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/column_jmy"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/column_kmy"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/column_hx"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size" />
    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:listSelector="@drawable/list_item_selector"
        android:scrollbarStyle="outsideOverlay" />

</LinearLayout>