<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="185.67dip"
    android:background="#e8e8e8"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_black_prompt"
        android:layout_width="match_parent"
        android:layout_height="48dip"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/tv_black_prompt"
        android:textColor="#898989"
        android:textSize="12.67sp" />

    <TextView
        android:id="@+id/take_camera"
        android:layout_width="match_parent"
        android:layout_height="43.33dip"
        android:layout_marginTop="0.5dip"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/take_camera"
        android:textColor="#333333"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/take_photo"
        android:layout_width="match_parent"
        android:layout_height="43.33dip"
        android:layout_marginTop="0.5dip"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="@string/take_photo"
        android:textColor="#333333"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="44dip"
        android:layout_marginTop="3.33dip"
        android:background="@android:color/white"
        android:gravity="center"
        android:text="取消"
        android:textColor="#777777"
        android:textSize="14sp" />
</LinearLayout>